methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: not found: value green
    if (getCouleurSol() == green) {
                           ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol() == green) {
    ^