methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (!estFaceMur()){
    avance()
    if (getCouleurSol() == green) {
      recule()
      return true
    }
  } else {
    return false
  }
}